# dfs.recipes

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.excalidraw  dev.md  docker-compose.yml  pyproject.toml
notebooks/: dataset_labels.json  nn.py  premier_league_matchlogs.csv
src/dfs_recipes/: __init__.py  main.py
src/dfs_recipes/agents/: echarts_agent.py
src/dfs_recipes/api/: auth.py  charts.py  health.py  history.py
src/dfs_recipes/config/: __init__.py  constants.py  rate_limiter.py  settings.py
src/dfs_recipes/database/: checkpoints.py  in_memory_client.py  sqlite_client.py
src/dfs_recipes/models/: __init__.py  api.py  auth.py  llm.py
src/dfs_recipes/static/: index.html  runtime.bundle.js
src/dfs_recipes/static/data/: metadata.json
src/dfs_recipes/utils/: data_utils.py  js_validator.py
src/dfs_recipes/web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/dfs_recipes/web/modules/: chart.js  data.js  lines.js  message.js  observable.js  sandbox.js  webauthn_client.js
src/dfs_recipes/web/styles/: breakpoints.css  index.css
web/: Dockerfile  index.html  index.js  manifest.json  package.json  webpack.config.js
web/data/: metadata.json
web/data/NBA/IND/: Aaron Nesmith.json  Andrew Nembhard.json  Ben Sheppard.json  Bennedict Mathurin.json  Myles Turner.json  Obi Toppin.json  Pascal Siakam.json  T.J. McConnell.json  Tony Bradley.json  (+1 more)
web/modules/: chart.js  data.js  lines.js  message.js  navigation.js  sandbox.js  workerTemplate.js
web/nginx/: nginx.conf
web/styles/: index.css  normalize.css
(+65 files in other folders)
